Update dependencies and changelog

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "php": "^7.2.5|^8.0",
         "illuminate/support": "^7.0|^8.0|^9.0|^10.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "goran-popovic/email-octopus-php": "dev-main"
+        "goran-popovic/email-octopus-php": "^v1.0.1"
     },
     "extra": {
         "laravel": {
