--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "type": "library",
     "require": {
         "php": "^7.2.5|^8.0",
-        "illuminate/support": "^7.0|^8.0|^9.0|^10.0",
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0|^11.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "goran-popovic/email-octopus-php": "^v1.0.1"
     },
